创建被观察者的方式

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         </activity>
         <activity android:name=".ObserverActivity">
         </activity>
+        <activity android:name=".OperatorsActivity">
+        </activity>
+        <activity android:name=".FlowableActivity">
+        </activity>
     </application>
 
 </manifest>
